update to intro/conclusion

--- a/analysis/HousePriceRegressionAnalysis.Rmd
+++ b/analysis/HousePriceRegressionAnalysis.Rmd
@@ -71,7 +71,8 @@ train2 <- train2 %>% filter(GrLivArea < 4000)
 
 # Introduction
 
-What is the price of a home in Ames, Iowa?  Our inaugural project in the program curriculum had us competing in an online competition utilizing the linear regression techniques that we’ve learned up to this point.  Our team chose R as the preferred analysis platform as the consensus was that it had more applicable uses in industry.  The objective was to apply various predictive models in order to assess the suitability of our parameter selections in determining the sales price of a home.  The measure of accuracy was logged in terms of the Root Mean Square Error, or RMSE, as well as other comparison models such as cross-validation and the adjusted R-squared.  Our approach was limited in that we not permitted to use more advanced algorithms that we will be exposed to later on, but the exploratory data analysis and data cleaning methods that we’ve learned and made use of here will surely be of use to us in our future personal and academic endeavors.
+What is the price of a home in Ames, Iowa? Our inaugural project for the Statistical Foundations for Data Science course in the Southern Methodist University Master of Science in Data Science 
+(MSDS) program was to compete in an online Kaggle competition utilizing linear regression techniques we've learned in this course to date. Our team elected to use R as the preferred analysis platform under the consensus that it has more broad applicability for use in industry, including data gathering and wrangling, in addition to advanced visualization and analytic tools. The project objective was to apply various predictive models in order to assess the suitability of our parameter selections for determining the sales prices of homes in Ames. The measures of accuracy were applied in terms of the Root Mean Square Error, or RMSE, as well as other comparison models such as cross-validation, and the adjusted R-squared. Our approach outlined in this research document is limited in that we were not permitted to use more advanced algorithms we will be exposed to later in the MSDS program; rather, in conjunction with the aforementioned linear regression techniques, we were directed to apply the exploratory data analysis and data cleaning methods we have learned, which will surely be of use to us in our future personal and academic endeavors.
 
 # Ames, Iowa Data Set
 
@@ -889,7 +890,7 @@ kable(data.frame('Model' = c('Custom', 'Forward Selection', 'Backward Selection'
 
 ## Conclusion
 
-In an effort to produce very predictive model with linear regression, all explanatory variables were considered with three types of varaible selection techniques: forward selection, backward selection, stepwise selection. A custom model was initially produced by eleminating variables suggested for elimination by the automatic selection processes, exploring the data with pairwise scatter plots, and adding interaction terms based on graphical analysis and domain knowledge. Automated selection was reapplied to suggest terms from the initial custom model. The final models suggested by automated techniques produced high $R^2$ values, but performed poorly on the Kaggle test set. This suggests the automated techniques were overfitting to the training data. The final custom model, produced a high $R^2$ value and perfromed well on the Kaggle test set (see section \ref{appendix:kaggle}). This suggests that the custom model is not overfitting to the traing data and generalizes well to an unseen dataset.
+In an effort to produce a highly accurate and repeatable predictive model using linear regression, all explanatory variables were considered with three types of variable selection techniques: forward selection, backward elimination, and stepwise regression. Additionally, a custom model was initially produced by eliminating variables suggested by the automatic selection processes, visually exploring the data with pairwise scatter plots, and adding interaction terms based on graphical analysis and domain knowledge. Automatic selection was reapplied to suggest terms from the initial custom model, which was then again adjusted for final inspection by the automatic techniques. The final models suggested strictly by the automatic techniques produced high $R^2$ values, but performed poorly on the Kaggle test set. This suggests the automatic techniques alone were overfitting to the training data. The final custom model, however, produced a high $R^2$ value and performed remarkably well on the Kaggle test set (see section \ref{appendix:kaggle}). This suggests that the custom model is not overfitting to the training data and generalizes well to an unseen dataset. Ultimately, we determined the best approach is a combination of automatic selection, visual and analytic inspection, and the application of domain knowledge.
 
 \newpage
 
