--- a/analysis/HousePriceRegressionAnalysis.Rmd
+++ b/analysis/HousePriceRegressionAnalysis.Rmd
@@ -29,6 +29,7 @@ editor_options:
 ---
 
 ```{r, lib-read, results='hide', message=FALSE, include=FALSE, echo=FALSE}
+setwd('.')
 ### Compuational Setup
 # libraries
 library(knitr)
@@ -49,25 +50,18 @@ source('./helper/data_munging.R')
 source('./helper/performance.R')
 
 # load data
-train <- read_csv('./data/train.csv')
+#train <- read_csv('./data/train.csv')
 
 # data for analysis 2
-train2 <- read_csv('./data/train.csv')
-test <- read_csv('./data/test.csv')
+#train <- read_csv('./data/train.csv')
+#test <- read_csv('./data/test.csv')
 
-train <- train %>% 
-  filter(Neighborhood %in% c("Edwards", "BrkSide", "NAmes"))
-train$Neighborhood <- as.factor(train$Neighborhood)
+load('./data/data.RData')
 
-# create dummy variables with Neighborhood == 'Edwards' as reference
-train <- get.dummies(train, "Neighborhood", reference = 'Edwards')
-
-# remove suspect points from training data
-train.mod <- train %>% filter(GrLivArea < 4000)
-
-# data for analysis 2
-train2 <- train2 %>% filter(GrLivArea < 4000)
+# 
+train <- train %>% filter(GrLivArea < 4000)
 ```
+
 
 # Introduction
 
@@ -108,6 +102,15 @@ We will consider two models: the logarithm of sale price as the response of livi
 The ESS test provides convincing evidence that the interaction terms are useful for the model (p-value < 0.0001); thus, we will continue with the full model.
 
 ```{r, ESS, echo=FALSE}
+# filter data for analysis 1
+train.mod <- train %>% 
+  filter(Neighborhood %in% c("Edwards", "BrkSide", "NAmes"))
+train.mod$Neighborhood <- factor(train.mod$Neighborhood, levels = c("Edwards", "BrkSide", "NAmes"))
+
+
+# create dummy variables with Neighborhood == 'Edwards' as reference
+train.mod <- get.dummies(train.mod, "Neighborhood", reference = 'Edwards')
+
 # full model formula
 model.formula = log(SalePrice) ~ (GrLivArea) + 
      Neighborhood_BrkSide + 
@@ -260,261 +263,7 @@ Through analyzing our variable selection and cross-validation processes - along 
 
 Regarding missing data, we imputed NA values for 19 variables using a combination of the data dictionary provided by Century 21 as well as our domain knowledge. After building models with and without transformations applied to variables, we noted no significaznt difference in variable selection from our selection process so elected to use non-transformed predictor variables. We did, however, use the log-transformed `SalePrice` applied in the first analysis.
 
-
-```{r, replace_na, echo=F, results='hide'}
-# Count NAs, impute where needed
-na_count <- sapply(train2, function(cnt) sum(length(which(is.na(cnt)))))
-
-
-train2$GarageYrBlt[is.na(train2$GarageYrBlt)] <- 0
-test$GarageYrBlt[is.na(test$GarageYrBlt)] <- 0
-
-train2$LotFrontage[is.na(train2$LotFrontage)] <- mean(train2$LotFrontage, na.rm=TRUE)
-test$LotFrontage[is.na(test$LotFrontage)] <- mean(test$LotFrontage, na.rm=TRUE)
-
-train2$MasVnrArea[is.na(train2$MasVnrArea)] <- 0
-test$MasVnrArea[is.na(test$MasVnrArea)] <- 0
-
-train2$Alley[is.na(train2$Alley)] <- 'None'
-test$Alley[is.na(test$Alley)] <- 'None'
-
-train2$MasVnrType[is.na(train2$MasVnrType)] <- 'None'
-test$MasVnrType[is.na(test$MasVnrType)] <- 'None'
-
-train2$BsmtQual[is.na(train2$BsmtQual)] <- 'None'
-test$BsmtQual[is.na(test$BsmtQual)] <- 'None'
-
-train2$BsmtCond[is.na(train2$BsmtCond)] <- 'None'
-test$BsmtCond[is.na(test$BsmtCond)] <- 'None'
-
-train2$BsmtExposure[is.na(train2$BsmtExposure)] <- 'None'
-test$BsmtExposure[is.na(test$BsmtExposure)] <- 'None'
-
-train2$BsmtFinType1[is.na(train2$BsmtFinType1)] <- 'None'
-test$BsmtFinType1[is.na(test$BsmtFinType1)] <- 'None'
-
-train2$BsmtFinType2[is.na(train2$BsmtFinType2)] <- 'None'
-test$BsmtFinType2[is.na(test$BsmtFinType2)] <- 'None'
-
-train2$FireplaceQu[is.na(train2$FireplaceQu)] <- 'None'
-test$FireplaceQu[is.na(test$FireplaceQu)] <- 'None'
-
-train2$GarageType[is.na(train2$GarageType)] <- 'None'
-test$GarageType[is.na(test$GarageType)] <- 'None'
-
-train2$GarageFinish[is.na(train2$GarageFinish)] <- 'None'
-test$GarageFinish[is.na(test$GarageFinish)] <- 'None'
-
-train2$GarageQual[is.na(train2$GarageQual)] <- 'None'
-test$GarageQual[is.na(test$GarageQual)] <- 'None'
-
-train2$GarageCond[is.na(train2$GarageCond)] <- 'None'
-test$GarageCond[is.na(test$GarageCond)] <- 'None'
-
-train2$PoolQC[is.na(train2$PoolQC)] <- 'None'
-test$PoolQC[is.na(test$PoolQC)] <- 'None'
-
-train2$Fence[is.na(train2$Fence)] <- 'None'
-test$Fence[is.na(test$Fence)] <- 'None'
-
-train2$MiscFeature[is.na(train2$MiscFeature)] <- 'None'
-test$MiscFeature[is.na(test$MiscFeature)] <- 'None'
-
-train2$Electrical[is.na(train2$Electrical)] <- 'SBrkr'
-test$Electrical[is.na(test$Electrical)] <- 'SBrkr'
-
-train2$BldgType[is.na(train2$BldgType)] <- '1Fam'
-test$BldgType[is.na(test$BldgType)] <- '1Fam'
-
-train2$BsmtExposure[is.na(train2$BsmtExposure)] <- 'None'
-test$BsmtExposure[is.na(test$BsmtExposure)] <- 'None'
-
-train2$Neighborhood <- as.factor(train2$Neighborhood)
-test$Neighborhood <- as.factor(test$Neighborhood)
-
-train2$BldgType <- as.factor(train2$BldgType)
-test$BldgType <- as.factor(test$BldgType)
-
-train2$HouseStyle <- as.factor(train2$HouseStyle)
-test$HouseStyle <- as.factor(test$HouseStyle)
-
-train2$RoofStyle <- as.factor(train2$RoofStyle)
-test$RoofStyle <- as.factor(test$RoofStyle)
-
-train2$RoofMatl <- as.factor(train2$RoofMatl)
-test$RoofMatl <- as.factor(test$RoofMatl)
-
-train2$Exterior1st <- as.factor(train2$Exterior1st)
-test$Exterior1st <- as.factor(test$Exterior1st)
-
-train2$Exterior2nd <- as.factor(train2$Exterior2nd)
-test$Exterior2nd <- as.factor(test$Exterior2nd)
-
-train2$ExterQual <- as.factor(train2$ExterQual)
-test$ExterQual <- as.factor(test$ExterQual)
-
-train2$ExterCond <- as.factor(train2$ExterCond)
-test$ExterCond <- as.factor(test$ExterCond)
-
-train2$Foundation <- as.factor(train2$Foundation)
-test$Foundation <- as.factor(test$Foundation)
-
-train2$Heating <- as.factor(train2$Heating)
-test$Heating <- as.factor(test$Heating)
-
-train2$HeatingQC <- as.factor(train2$HeatingQC)
-test$HeatingQC <- as.factor(test$HeatingQC)
-
-train2$CentralAir <- as.factor(train2$CentralAir)
-test$CentralAir <- as.factor(test$CentralAir)
-
-train2$KitchenQual <- as.factor(train2$KitchenQual)
-test$KitchenQual <- as.factor(test$KitchenQual)
-
-train2$Functional <- as.factor(train2$Functional)
-test$Functional <- as.factor(test$Functional)
-
-train2$PavedDrive <- as.factor(train2$PavedDrive)
-test$PavedDrive <- as.factor(test$PavedDrive)
-
-train2$SaleType <- as.factor(train2$SaleType)
-test$SaleType <- as.factor(test$SaleType)
-
-
-train2$Utilities <- as.factor(train2$Utilities)
-test$Utilities <- as.factor(test$Utilities)
-
-na_count <- sapply(train2, function(cnt) sum(length(which(is.na(cnt)))))
-
-```
-
-```{r, recode, echo=F, results='hide'}
-
-# 1)  Remove Basement Condition as it is too correlated with Basement Quality
-# 2)  Remove Garage Condition as it is too correlated with Garage Quality
-# 3)  Remove utilities from the train/test data sets as it doesn't have enough observations in each the 2 levels
-train2 = subset(train2, select = -c(Utilities, BsmtCond, GarageCond) )
-test = subset(test, select = -c(Utilities, BsmtCond, GarageCond) )
-
-
-
-#####################################################################################################################
-
-# The MSSubClass variable appears numeric but should be treated as a factor
-# 150 forced to another choice as this wasn't found in the training data set
-train2$MSSubClass <- dplyr::recode(train2$MSSubClass, `30` = "30F", `180` = "180F", `45` = "45F", `190` = "190F",
-                                  `90` = "190F", `160` = "160F", `50` = "50F", `40` = "40F", `85` = "85F", `70` = "70F",
-                                 `80` = "80F", `20` = "20F", `75` = "75F", `120` = "120F", `60` = "60F", `150` = "75F")
-
-test$MSSubClass <- dplyr::recode(test$MSSubClass, `30` = "30F", `180` = "180F", `45` = "45F", `190` = "190F",
-                                  `90` = "190F", `160` = "160F", `50` = "50F", `40` = "40F", `85` = "85F", `70` = "70F",
-                                 `80` = "80F", `20` = "20F", `75` = "75F", `120` = "120F", `60` = "60F", `150` = "75F")
-
-
-train2$MSSubClass <- as.factor(train2$MSSubClass)
-test$MSSubClass <- as.factor(test$MSSubClass)
-
-
-#####################################################################################################################
-train2$GarageQual <- dplyr::recode(train2$GarageQual, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
-test$GarageQual <- dplyr::recode(test$GarageQual, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
-
-train2$GarageFinish <- dplyr::recode(train2$GarageFinish, 'None' = 0, 'Unf' = 1, 'RFn' = 2, 'Fin' = 3)
-test$GarageFinish <- dplyr::recode(test$GarageFinish, 'None' = 0, 'Unf' = 1, 'RFn' = 2, 'Fin' = 3)
-
-train2$GarageType <- dplyr::recode(train2$GarageType, 'None' = 0, 'CarPort' = 1, '2Types' = 2, 
-                                  'Basment' = 3, 'Detchd' = 4, 'Attchd' = 5, 'BuiltIn' = 6)
-test$GarageType <- dplyr::recode(test$GarageType, 'None' = 0, 'CarPort' = 1, '2Types' = 2, 
-                                 'Basment' = 3, 'Detchd' = 4, 'Attchd' = 5, 'BuiltIn' = 6)
-
-# train2$GarageCond <- dplyr::recode(train2$GarageCond, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
-# test$GarageCond <- dplyr::recode(test$GarageCond, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
-
-#####################################################################################################################
-
-train2$BsmtQual <- dplyr::recode(train2$BsmtQual, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
-test$BsmtQual <- dplyr::recode(test$BsmtQual, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
-
-# train2$BsmtCond <- dplyr::recode(train2$BsmtCond, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
-# test$BsmtCond <- dplyr::recode(test$BsmtCond, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
-
-train2$BsmtFinType1 <- dplyr::recode(train2$BsmtFinType1, 'None' = 0, 'Unf' = 1, 'LwQ' = 2, 'Rec' = 3, 
-                                    'BLQ' = 4, 'ALQ' = 5, 'GLQ' = 6)
-test$BsmtFinType1 <- dplyr::recode(test$BsmtFinType1, 'None' = 0, 'Unf' = 1, 'LwQ' = 2, 'Rec' = 3, 
-                                   'BLQ' = 4, 'ALQ' = 5, 'GLQ' = 6)
-
-
-train2$BsmtFinType2 <- dplyr::recode(train2$BsmtFinType2, 'None' = 0, 'Unf' = 1, 'LwQ' = 2, 'Rec' = 3, 
-                                    'BLQ' = 4, 'ALQ' = 5, 'GLQ' = 6)
-test$BsmtFinType2 <- dplyr::recode(test$BsmtFinType2, 'None' = 0, 'Unf' = 1, 'LwQ' = 2, 'Rec' = 3, 
-                                   'BLQ' = 4, 'ALQ' = 5, 'GLQ' = 6)
-
-
-train2$BsmtExposure <- dplyr::recode(train2$BsmtExposure, 'None' = 0, 'No' = 1, 'Mn' = 2, 'Av' = 3, 'Gd' = 4)
-test$BsmtExposure <- dplyr::recode(test$BsmtExposure, 'None' = 0, 'No' = 1, 'Mn' = 2, 'Av' = 3, 'Gd' = 4)
-
-#####################################################################################################################
-
-train2$LandSlope <- dplyr::recode(train2$LandSlope, 'Sev' = 0, 'Mod' = 1, 'Gtl' = 2)
-test$LandSlope <- dplyr::recode(test$LandSlope, 'Sev' = 0, 'Mod' = 1, 'Gtl' = 2)
-
-
-train2$MSZoning <- dplyr::recode(train2$MSZoning, 'C (all)' = 0, 'RM' = 1, 'RH' = 2, 'RL' = 3, 'FV' = 4)
-test$MSZoning <- dplyr::recode(test$MSZoning, 'C (all)' = 0, 'RM' = 1, 'RH' = 2, 'RL' = 3, 'FV' = 4)
-
-
-train2$PoolQC <- dplyr::recode(train2$PoolQC, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
-test$PoolQC <- dplyr::recode(test$PoolQC, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
-
-
-train2$FireplaceQu <- dplyr::recode(train2$FireplaceQu, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
-test$FireplaceQu <- dplyr::recode(test$FireplaceQu, 'None' = 0, 'Po' = 1, 'Fa' = 2, 'TA' = 3, 'Gd' = 4, 'Ex' = 5)
-
-#####################################################################################################################
-
-```
-
-
-```{r, convert_to_factor, echo=F, results='hide'}
-
-train$Street <- ordered(train$Street, levels = c("Grvl", "Pave"))
-test$Street <- ordered(test$Street, levels = c("Grvl", "Pave"))
-
-train$LotShape <- ordered(train$LotShape, levels = c("Reg", "IR1", "IR2", "IR3"))
-test$LotShape <- ordered(test$LotShape, levels = c("Reg", "IR1", "IR2", "IR3"))
-
-train$LandContour <- ordered(train$LandContour, levels = c("Bnk", "Lvl", "Low", "HLS"))
-test$LandContour <- ordered(test$LandContour, levels = c("Bnk", "Lvl", "Low", "HLS"))
-
-train$LotConfig <- ordered(train$LotConfig, levels = c("Inside", "Corner", "CulDSac", "FR2", "FR3"))
-test$LotConfig <- ordered(test$LotConfig, levels = c("Inside", "Corner", "CulDSac", "FR2", "FR3"))
-
-train$Condition1 <- ordered(train$Condition1, levels = c("Artery", "Feedr", "RRAe", "Norm", "RRAn", "RRNe", "RRNn", "PosA", "PosN"))
-test$Condition1 <- ordered(test$Condition1, levels = c("Artery", "Feedr", "RRAe", "Norm", "RRAn", "RRNe", "RRNn", "PosA", "PosN"))
-
-train$Condition2 <- ordered(train$Condition2, levels = c("Artery", "RRNn","RRAn","Feedr", "Norm", "RRAe", "PosN", "PosA"))
-test$Condition2 <- ordered(test$Condition2, levels = c("Artery", "RRNn","RRAn","Feedr", "Norm", "RRAe", "PosN", "PosA"))
-
-train$Alley <- ordered(train$Alley, levels = c("None", "Grvl", "Pave"))
-test$Alley <- ordered(test$Alley, levels = c("None", "Grvl", "Pave"))
-
-train$MasVnrType <- ordered(train$MasVnrType, levels = c("None", "CBlock", "BrkFace", "BrkCmn", "Stone"))
-test$MasVnrType <- ordered(test$MasVnrType, levels = c("None", "CBlock", "BrkFace", "BrkCmn", "Stone"))
-
-train$Fence <- ordered(train$Fence, levels = c("None", "MnWw", "GdWo", "MnPrv", "GdPrv"))
-test$Fence <- ordered(test$Fence, levels = c("None", "MnWw", "GdWo", "MnPrv", "GdPrv"))
-
-train$Electrical <- ordered(train$Electrical, levels = c("Mix", "FuseP", "FuseF", "FuseA", "SBrkr"))
-test$Electrical <- ordered(test$Electrical, levels = c("Mix", "FuseP", "FuseF", "FuseA", "SBrkr"))
-
-train$MiscFeature <- ordered(train$MiscFeature, levels = c("None", "Othr", "Shed", "Gar2", "TenC"))
-test$MiscFeature <- ordered(test$MiscFeature, levels = c("None", "Othr", "Shed", "Gar2", "TenC"))
-
-train$SaleCondition <- factor(train$SaleCondition, levels = c("Abnorml", "AdjLand", "Alloca", "Partial", "Family", "Normal"))
-test$SaleCondition <- factor(test$SaleCondition, levels = c("Abnorml", "AdjLand", "Alloca", "Partial", "Family", "Normal"))
-
-```
-
+# Here
 
 **Forward Selection**
 
@@ -523,7 +272,7 @@ Forward selection is a variable selection methodology that begins with a constan
 
 ```{r, echo=F, results='hide'}
 # Initial Model - Forward Selection
-model2.forward.Start <- lm(log(SalePrice)~1,data = train2)
+model2.forward.Start <- lm(log(SalePrice)~1,data = train)
 
 # All Variables Model - Forward Selection
 model2.Allvar <- lm(log(SalePrice) ~ OverallQual + GrLivArea + Neighborhood + 
@@ -535,7 +284,7 @@ model2.Allvar <- lm(log(SalePrice) ~ OverallQual + GrLivArea + Neighborhood +
                       LotFrontage + Foundation + Heating + KitchenAbvGr + EnclosedPorch + 
                       HalfBath + FullBath + MasVnrType + BsmtFinSF2 + HeatingQC + 
                       GarageArea + SaleType + ExterCond + PoolArea + BsmtFinType1 + 
-                      GarageYrBlt + Electrical + `3SsnPorch` + LowQualFinSF, data = train2
+                      GarageYrBlt + Electrical + `3SsnPorch` + LowQualFinSF, data = train
                     )
 
 #### Forward Selection, first pass
@@ -560,7 +309,7 @@ final.Forward.Model <- lm(log(SalePrice) ~ OverallQual + GrLivArea + Neighborhoo
                             LotFrontage + Foundation + Heating + KitchenAbvGr + EnclosedPorch + 
                             HalfBath + FullBath + MasVnrType + BsmtFinSF2 + HeatingQC + 
                             GarageArea + SaleType + ExterCond + PoolArea + BsmtFinType1 + 
-                            GarageYrBlt + Electrical + `3SsnPorch` + LowQualFinSF, data = train2
+                            GarageYrBlt + Electrical + `3SsnPorch` + LowQualFinSF, data = train
                           )
 ```
 
@@ -586,7 +335,7 @@ final.Backward.Model <- lm(log(SalePrice) ~ MSSubClass + MSZoning + LotFrontage 
                               `2ndFlrSF` + LowQualFinSF + BsmtFullBath + FullBath + HalfBath +
                               KitchenAbvGr + KitchenQual + Functional + FireplaceQu + GarageYrBlt +
                               GarageCars + GarageArea + GarageQual + WoodDeckSF + OpenPorchSF +
-                              EnclosedPorch + ScreenPorch + PoolArea + SaleType + SaleCondition, data = train2
+                              EnclosedPorch + ScreenPorch + PoolArea + SaleType + SaleCondition, data = train
                            )
 
 ##### If needed for display, this is the final model, final validation with Backward Elimination
@@ -616,7 +365,7 @@ final.Stepwise.Model <- lm(log(SalePrice) ~ OverallQual + GrLivArea + Neighborho
                               LotFrontage + Foundation + Heating + KitchenAbvGr + EnclosedPorch + 
                               HalfBath + FullBath + MasVnrType + BsmtFinSF2 + HeatingQC + 
                               GarageArea + SaleType + ExterCond + PoolArea + BsmtFinType1 + 
-                              GarageYrBlt + Electrical + `3SsnPorch` + LowQualFinSF, data = train2
+                              GarageYrBlt + Electrical + `3SsnPorch` + LowQualFinSF, data = train
                            )
 
 # If needed for display, this is the final model, final validation with Stepwise Regression
@@ -633,7 +382,7 @@ To develop the custom model, we employed a combination of a correlation matrix f
 
 ```{r, echo=F, results='hide'}
 
-#train2.numeric <- dplyr::select_if(train2, is.numeric) %>% data.frame()
+#train.numeric <- dplyr::select_if(train, is.numeric) %>% data.frame()
 
 #flattenCorrMatrix <- function(cormatrix, pmatrix) {
 #  ut <- upper.tri(cormatrix)
@@ -646,7 +395,7 @@ To develop the custom model, we employed a combination of a correlation matrix f
 #}
 
 #See what variables are correlated with eachother, p-values
-#correlation.matrix <- rcorr(as.matrix(train2.numeric))
+#correlation.matrix <- rcorr(as.matrix(train.numeric))
 #corDF <- data.frame(flattenCorrMatrix(correlation.matrix$r, correlation.matrix$P))
 
 #Order the correlation matrix to show the highest correlated
@@ -662,7 +411,7 @@ fitFull.all4.Final <- lm(log(SalePrice) ~ MSSubClass + MSZoning + LotFrontage +
                             `2ndFlrSF` + LowQualFinSF + BsmtFullBath + FullBath + HalfBath + 
                             KitchenAbvGr + KitchenQual + Functional + FireplaceQu + GarageYrBlt + 
                             GarageCars + GarageArea + GarageQual + WoodDeckSF + OpenPorchSF + 
-                            EnclosedPorch + ScreenPorch + SaleType + SaleCondition, data = train2)
+                            EnclosedPorch + ScreenPorch + SaleType + SaleCondition, data = train)
 
 ######################################################################
 ###We need the graphs for interactive terms to display interaction####
@@ -681,7 +430,7 @@ Based on the diagnostic plots below, the custom model appears to reasonably meet
 #plot(fitFull.all4.Final, main = "Custom Model")
 
 # create plots of residuals
-basic.fit.plots(train2, fitFull.all4.Final)
+basic.fit.plots(train, fitFull.all4.Final)
 # create leverage / outlier plot
 ols_plot_resid_lev(fitFull.all4.Final)
 ```
@@ -728,7 +477,7 @@ model.cv2 <- train(log(SalePrice) ~ MSSubClass + MSZoning + LotFrontage +
                       KitchenAbvGr + KitchenQual + Functional + FireplaceQu + GarageYrBlt + 
                       GarageCars + GarageArea + GarageQual + WoodDeckSF + OpenPorchSF + 
                       EnclosedPorch + ScreenPorch + SaleType + SaleCondition,
-                   data = train2,
+                   data = train,
                    method = 'lm',
                    trControl = train.control2)
 
@@ -758,7 +507,7 @@ model.cv2 <- train(log(SalePrice) ~ OverallQual + GrLivArea + Neighborhood +
                       HalfBath + FullBath + MasVnrType + BsmtFinSF2 + HeatingQC + 
                       GarageArea + SaleType + ExterCond + PoolArea + BsmtFinType1 + 
                       GarageYrBlt + Electrical + `3SsnPorch` + LowQualFinSF,
-                   data = train2,
+                   data = train,
                    method = 'lm',
                    trControl = train.control2)
 
@@ -788,7 +537,7 @@ model.cv2 <- train(log(SalePrice) ~ MSSubClass + MSZoning + LotFrontage +
                       KitchenAbvGr + KitchenQual + Functional + FireplaceQu + GarageYrBlt +
                       GarageCars + GarageArea + GarageQual + WoodDeckSF + OpenPorchSF +
                       EnclosedPorch + ScreenPorch + PoolArea + SaleType + SaleCondition,
-                   data = train2,
+                   data = train,
                    method = 'lm',
                    trControl = train.control2)
 
@@ -818,7 +567,7 @@ model.cv2 <- train(log(SalePrice) ~ OverallQual + GrLivArea + Neighborhood +
                       HalfBath + FullBath + MasVnrType + BsmtFinSF2 + HeatingQC + 
                       GarageArea + SaleType + ExterCond + PoolArea + BsmtFinType1 + 
                       GarageYrBlt + Electrical + `3SsnPorch` + LowQualFinSF,
-                   data = train2,
+                   data = train,
                    method = 'lm',
                    trControl = train.control2)
 
@@ -923,7 +672,8 @@ The images below show the scatter plots of log sale price vs living room area (F
 # plots of log of sale price ~ living room area
 
 # create scatter plot for northwest ames
-regplot.names <- train %>% filter(Neighborhood == 'NAmes') %>%
+regplot.names <- train %>%
+  filter(Neighborhood == 'NAmes') %>%
   ggplot(aes(x = (GrLivArea), y = log(SalePrice))) +
   geom_point(alpha = 0.3) +
   ylim(10, 13) +
@@ -933,7 +683,6 @@ regplot.names <- train %>% filter(Neighborhood == 'NAmes') %>%
 
 # create scatter plot for edwards
 regplot.ed <- train %>%
-  filter(GrLivArea < 4000) %>%
   filter(Neighborhood == 'Edwards') %>%
   ggplot(aes(x = (GrLivArea), y = log(SalePrice))) +
   geom_point(alpha = 0.3) +
@@ -943,7 +692,8 @@ regplot.ed <- train %>%
        y = 'Log of Sale Price', x = 'Living Room Area (sq. ft.)')
 
 # create regression plot for brookside
-regplot.brk <- train %>% filter(Neighborhood == 'BrkSide') %>%
+regplot.brk <- train %>%
+  filter(Neighborhood == 'BrkSide') %>%
   ggplot(aes(x = (GrLivArea), y = log(SalePrice))) +
   geom_point(alpha = 0.3) +
   ylim(10, 13) +
@@ -957,7 +707,6 @@ grid.arrange(regplot.names,regplot.ed,regplot.brk, nrow = 2,
 
 # scatter plot of observations from all three neighborhoods
 train %>% 
-  filter(GrLivArea < 4000) %>%
   ggplot(aes(x = (GrLivArea), y = log(SalePrice))) +
   geom_point(alpha = 0.3) +
   labs(title = 'Log of Sale Price vs Living Room Area', 
@@ -971,16 +720,10 @@ train %>%
 
 The two outlying observations with living room areas greater than 4000 sq. ft. appear to be from a different distribution than the main dataset. Since these are partial sales, it is possible that the sale prices do not reflect market value. For this reason, we will limit the analysis to properities with less than 3500 sq. ft. (Figure \@ref(fig:infleu-points))
 
-```{r, results='hide', message=F, warning=F, echo=F}
-train <- read_csv('./data/train.csv')
-train$Neighborhood <- as.factor(train$Neighborhood)
-```
-
-
 ```{r, infleu-points, echo=FALSE, fig.width=5, fig.height=5, fig.align='center', fig.cap='Influential Points', out.width = '50%', fig.pos="htbp"}
 
 # scatter plot of observations from all three neighborhoods with labeling by `SaleCondition`
-train %>% 
+train.mod %>% 
   filter(Neighborhood %in% c("Edwards", "BrkSide", "NAmes")) %>%
   ggplot(aes(x = (GrLivArea), y = log(SalePrice))) +
   geom_point(alpha = 0.3) +
@@ -1088,7 +831,7 @@ Generally, based on the diagonstic plots, these models appear to reasonably meet
 
 ```{r, forward-assumptions, echo=F, warning=F, fig.width=5, fig.height=5, fig.align='center', fig.cap='Forward Selection Assumption Assessment Plots', out.width = '45%', fig.pos="htbp", fig.show='hold'}
 # create plots of residuals
-basic.fit.plots(train2, model2.Forward)
+basic.fit.plots(train, model2.Forward)
 # create leverage / outlier plot
 ols_plot_resid_lev(model2.Forward)
 ```
@@ -1096,7 +839,7 @@ ols_plot_resid_lev(model2.Forward)
 
 ```{r, backward-selection, echo=F, warning=F, fig.width=5, fig.height=5, fig.align='center', fig.cap='Backward Selection Assumption Assessment Plots', out.width = '45%', fig.pos="htbp", fig.show='hold'}
 # create plots of residuals
-basic.fit.plots(train2, model2.Backward)
+basic.fit.plots(train, model2.Backward)
 # create leverage / outlier plot
 ols_plot_resid_lev(model2.Backward)
 ```
@@ -1104,7 +847,7 @@ ols_plot_resid_lev(model2.Backward)
 
 ```{r, stepwise-assimptions, echo=F, warning=F, fig.width=5, fig.height=5, fig.align='center', fig.cap='Stepwise Selection Assumption Assessment Plots', out.width = '45%', fig.pos="htbp", fig.show='hold'}
 # create plots of residuals
-basic.fit.plots(train2, model2.Stepwise)
+basic.fit.plots(train, model2.Stepwise)
 # create leverage / outlier plot
 ols_plot_resid_lev(model2.Stepwise)
 ```
